# docx-mcp-server

./: .gitignore  .gtrconfig  .mcp.json  2026-01-26-local-command-caveatcaveat-the-messages-below-w.txt  CHANGELOG.md  CLAUDE.md  CLAUDE_DESKTOP_SETUP.md  GUI_TEST_BEST_PRACTICES.md  INTEGRATION_TEST_ANALYSIS.md  INTEGRATION_TEST_FIXES_APPLIED.md  INTEGRATION_TEST_FIX_SUMMARY.md  README.md  TOOL_USAGE_GUIDE.md  TOOL_USAGE_GUIDE_COMPACT.md  docx-server-launcher.spec  extract_funcs.py  pyproject.toml  reproduce_issue.py  temp_old_server.py  test_config.ini  tool_overlap_analysis.md
config/: dev.yaml  prod.yaml
docs/: CONFLICTS_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  MERGE_STATUS.md  MIGRATION_GUIDE_V2.md  OPTIMIZATION.md  TEST_FIX_PROGRESS.md  manual_test_live_preview.md  mcp-tools-guide-summary.md  mcp-tools-guide.md  migration-v2-to-v3.md
scripts/: add_special_id_error_handling.py  batch_update_tests.py  batch_update_tests_batch2.py  batch_update_tests_batch3.py  batch_update_tests_batch3_improved.py  batch_update_tests_batch4.py  batch_update_tests_batch5.py  batch_update_tests_batch6.py  batch_update_tests_session.py  build_exe.ps1  build_exe.sh  compile_translations.ps1  compile_translations.sh  create_icon.py  fix_all_test_files.py  fix_ci_failures.py  fix_cursor_assertions.py  fix_final_27_failures.py  fix_remaining_132_failures.py  fix_remaining_tests.py  fix_test_paragraph_tools_json.py  fix_tests_json_responses.py  install.sh  migrate_tools.py  migrate_tools_complete.py  test.sh  update_test_table_rowcol.py  update_test_table_tools_json.py  update_tests_markdown.py  update_tool_signatures.py  update_translations.sh
tests/: conftest.py  manual_test_log_search.py
(+294 files in other folders)
