[project]
name = "docx-mcp-server"
version = "0.2.0"
description = "A Model Context Protocol server for editing Docx files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
    "python-docx>=1.1.0",
    "pywin32>=306 ; sys_platform == 'win32'",
    "requests>=2.31.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0"
]

[project.optional-dependencies]
gui = [
    "PyQt6>=6.6.0",
    "pyinstaller>=6.3.0"
]
dev = [
    "PySide6>=6.6.0",  # For translation compilation tools (lrelease)
    "Pillow>=10.0.0",  # For icon generation
    "pytest>=7.4.0",
    "pytest-qt>=4.2.0"
]

[project.scripts]
mcp-server-docx = "docx_mcp_server.server:main"
docx-server-launcher = "docx_server_launcher.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docx_mcp_server", "src/docx_server_launcher"]

[tool.pytest.ini_options]
qt_api = "pyqt6"
